--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,17 +58,17 @@
             <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
 
             <dl class="catalog__properties properties">
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Масса</dt>
                 <dd class="properties__value">500 г</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Вкус</dt>
                 <dd class="properties__value">Курица</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Цена</dt>
                 <dd class="properties__value">700 ₽</dd>
               </div>
@@ -89,17 +89,17 @@
             <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
 
             <dl class="catalog__properties properties">
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Масса</dt>
                 <dd class="properties__value">1000 г</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Вкус</dt>
                 <dd class="properties__value">Курица</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Цена</dt>
                 <dd class="properties__value">1000 ₽</dd>
               </div>
@@ -120,17 +120,17 @@
             <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
 
             <dl class="catalog__properties properties">
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Масса</dt>
                 <dd class="properties__value">500 г</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Вкус</dt>
                 <dd class="properties__value">Рыба</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Цена</dt>
                 <dd class="properties__value">700 ₽</dd>
               </div>
@@ -151,17 +151,17 @@
             <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
 
             <dl class="catalog__properties properties">
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Масса</dt>
                 <dd class="properties__value">1000 г</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Вкус</dt>
                 <dd class="properties__value">Рыба</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Цена</dt>
                 <dd class="properties__value">1000 ₽</dd>
               </div>
@@ -182,17 +182,17 @@
             <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
 
             <dl class="catalog__properties properties">
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Масса</dt>
                 <dd class="properties__value">500 г</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Вкус</dt>
                 <dd class="properties__value">Гречка</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Цена</dt>
                 <dd class="properties__value">400 ₽</dd>
               </div>
@@ -213,17 +213,17 @@
             <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
 
             <dl class="catalog__properties properties">
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Масса</dt>
                 <dd class="properties__value">1000 г</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Вкус</dt>
                 <dd class="properties__value">Гречка</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Цена</dt>
                 <dd class="properties__value">700 ₽</dd>
               </div>
@@ -244,17 +244,17 @@
             <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
 
             <dl class="catalog__properties properties">
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Масса</dt>
                 <dd class="properties__value">500 г</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Вкус</dt>
                 <dd class="properties__value">Рис</dd>
               </div>
 
-              <div class="properties-item">
+              <div class="properties__item">
                 <dt class="properties__name">Цена</dt>
                 <dd class="properties__value">500 ₽</dd>
               </div>
@@ -274,8 +274,12 @@
       </ul>
     </section>
 
-    <section class="extra">
-      <h2 class="extra__title">Дополнительные товары</h2>
+    <section class="extra container">
+      <h2 class="extra__title crossed-title">
+        <span class="crossed-title__wrapper">
+          <span class="crossed-title__text">Дополнительные товары</span>
+        </span>
+      </h2>
 
       <ul class="extra__list">
         <li class="extra__item">
@@ -314,50 +318,61 @@
   </main>
 
   <footer class="main-footer">
-    <div class="main-footer__contacts">
-      <p class="main-footer__text">Приглашаем к сотрудничеству дилеров!</p>
+    <div class="main-footer__contacts main-footer__contacts--grey">
+      <p class="main-footer__text">Приглашаем <br>к сотрудничеству дилеров!</p>
       <address class="main-footer__address address">
-        <p class="address-text">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="address-text">Санкт-Петербург</p>
+        <p class="address-text regular-text">ул. Большая Конюшенная, д. 19/8</p>
+        <p class="address-text regular-text">Санкт-Петербург</p>
       </address>
     </div>
 
-    <a class="main-footer__map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
-      <picture>
-        <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
-        <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
-        <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
-      </picture>
+    <a class="main-footer__map map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
+      <div class="map__image">
+        <picture>
+          <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
+          <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
+          <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
+        </picture>
+      </div>
+
+      <div class="map__google">
+        <iframe class="map__google-link" title="Ссылка на Google карту с местоположением офиса." src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037876728603!2d30.320472477064794!3d59.93871647491512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1702570108647!5m2!1sru!2sru" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
     </a>
 
-    <a class="main-footer__logo" href="#" aria-current="page">
-      <img class="main-footer__logo-text" src="" alt="Логотип Кэт Энерджи.">
-    </a>
+    <div class="main-footer__info container">
+      <a class="main-footer__logo logo-text" href="#" aria-current="page">
+        <img class="main-footer__logo-text" src="images/logo-text.svg" width="128" height="24" alt="Логотип Кэт Энерджи.">
+      </a>
 
-    <ul class="main-footer__list socials">
-      <li class="socials__item">
-        <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
-          <img class="socials__image" src="" alt="ВКонтакте.">
+      <ul class="main-footer__list socials">
+        <li class="socials__item">
+          <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">ВКонтакте.</span>
+          </a>
+        </li>
+
+        <li class="socials__item">
+          <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">YouTube.</span>
+          </a>
+        </li>
+
+        <li class="socials__item">
+          <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Телеграм.</span>
+          </a>
+        </li>
+      </ul>
+
+      <div class="html-academy">
+        <span class="html-academy__text regular-text">HTML Academy</span>
+
+        <a class="html-academy__link" href="https://htmlacademy.ru/">
+          <span class="visually-hidden">Логотип HTML Academy.</span>
         </a>
-      </li>
-
-      <li class="socials__item">
-        <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-          <img class="socials__image" src="" alt="YouTube.">
-        </a>
-      </li>
-
-      <li class="socials__item">
-        <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
-          <img class="socials__image" src="" alt="Телеграм.">
-        </a>
-      </li>
-    </ul>
-
-    <a class="html-academy" href="https://htmlacademy.ru/">
-      <span class="html-academy__text">HTML Academy</span>
-      <img class="html-academy__logo" src="" alt="Логотип HTML Academy.">
-    </a>
+      </div>
+    </div>
   </footer>
 </body>
 
