--- a/source/catalog.html
+++ b/source/catalog.html
@@ -284,36 +284,44 @@
       <ul class="extra__list">
         <li class="extra__item">
           <h3 class="extra__item-title">Сахарозаменитель</h3>
-          <span class="extra__description">1 упаковка (100 г)</span>
-          <span class="extra__price">200 ₽</span>
-          <button class="extra__button" type="button">Заказать</button>
+          <div class="extra__text">
+            <span class="extra__description regular-text">1 упаковка (100 г)</span>
+            <span class="extra__price regular-text">200 ₽</span>
+          </div>
+          <button class="extra__button button button--primary" type="button">Заказать</button>
         </li>
 
         <li class="extra__item">
           <h3 class="extra__item-title">Питьевая вода</h3>
-          <span class="extra__description">5 литров</span>
-          <span class="extra__price">50 ₽</span>
-          <button class="extra__button" type="button">Заказать</button>
+          <div class="extra__text">
+            <span class="extra__description regular-text">5 литров</span>
+            <span class="extra__price regular-text">50 ₽</span>
+          </div>
+          <button class="extra__button button button--primary" type="button">Заказать</button>
         </li>
 
         <li class="extra__item">
           <h3 class="extra__item-title">Молоко</h3>
-          <span class="extra__description">1 литр</span>
-          <span class="extra__price">100 ₽</span>
-          <button class="extra__button" type="button">Заказать</button>
+          <div class="extra__text">
+            <span class="extra__description regular-text">1 литр</span>
+            <span class="extra__price regular-text">100 ₽</span>
+          </div>
+          <button class="extra__button button button--primary" type="button">Заказать</button>
         </li>
 
         <li class="extra__item">
           <h3 class="extra__item-title">Витамины</h3>
-          <span class="extra__description">1 упаковка (30 г)</span>
-          <span class="extra__price">300 ₽</span>
-          <button class="extra__button" type="button">Заказать</button>
+          <div class="extra__text">
+            <span class="extra__description regular-text">1 упаковка (30 г)</span>
+            <span class="extra__price regular-text">300 ₽</span>
+          </div>
+          <button class="extra__button button button--primary" type="button">Заказать</button>
         </li>
       </ul>
     </section>
 
-    <div class="gift">
-      <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
+    <div class="gift container">
+      <p class="gift__text">Закажите все <br>и получите чехол для кота в подарок!</p>
     </div>
   </main>
 
