--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,8 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Cat energy</title>
+  <title>Каталог товаров</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicons/apple.png"> <!-- 180×180 -->
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
 </head>
