--- a/source/index.html
+++ b/source/index.html
@@ -91,7 +91,7 @@
         </li>
 
         <li class="instruction__item instruction__item--clock">
-          <p class="instruction__description regular-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <p class="instruction__description regular-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p>
         </li>
       </ul>
     </section>
