--- a/source/index.html
+++ b/source/index.html
@@ -48,12 +48,14 @@
     <h1 class="visually-hidden">Интернет-магазин питания для котов.</h1>
 
     <section class="hero">
-      <div class="hero__container">
-        <h2 class="hero__title section-title">Функциональное питание для котов</h2>
-        <p class="hero__text">Занялся собой? Займись котом!</p>
-      </div>
+      <div class="hero__wrapper">
+        <div class="hero__container">
+          <h2 class="hero__title section-title">Функциональное питание для котов</h2>
+          <p class="hero__text">Занялся собой? Займись котом!</p>
+        </div>
 
-      <a class="hero__button button button--primary" href="form.html">Подобрать программу</a>
+        <a class="hero__button button button--primary" href="form.html">Подобрать программу</a>
+      </div>
     </section>
 
     <section class="programs container">
@@ -75,25 +77,27 @@
     </section>
 
     <section class="instruction container">
-      <h2 class="instruction__title section-title">Как это работает</h2>
+      <div class="instruction__wrapper">
+        <h2 class="instruction__title section-title">Как это работает</h2>
 
-      <ul class="instruction__list">
-        <li class="instruction__item instruction__item--leaf">
-          <p class="instruction__description regular-text">Функциональное питание содержит только полезные питательные вещества.</p>
-        </li>
+        <ul class="instruction__list">
+          <li class="instruction__item instruction__item--leaf">
+            <p class="instruction__description regular-text">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
 
-        <li class="instruction__item instruction__item--water">
-          <p class="instruction__description regular-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-        </li>
+          <li class="instruction__item instruction__item--water">
+            <p class="instruction__description regular-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
 
-        <li class="instruction__item instruction__item--tableware">
-          <p class="instruction__description regular-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
-        </li>
+          <li class="instruction__item instruction__item--tableware">
+            <p class="instruction__description regular-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
 
-        <li class="instruction__item instruction__item--clock">
-          <p class="instruction__description regular-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p>
-        </li>
-      </ul>
+          <li class="instruction__item instruction__item--clock">
+            <p class="instruction__description regular-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="case">
@@ -102,19 +106,21 @@
 
         <p class="case__description regular-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
-        <dl class="case__list">
-          <div class="case__item">
-            <dt class="case__text">снижение веса</dt>
-            <dd class="case__number">5 кг</dd>
-          </div>
+        <div class="case__inner">
+          <dl class="case__list">
+            <div class="case__item">
+              <dt class="case__text">снижение веса</dt>
+              <dd class="case__number">5 кг</dd>
+            </div>
 
-          <div class="case__item">
-            <dt class="case__text">затрачено времени</dt>
-            <dd class="case__number">60 дней</dd>
-          </div>
-        </dl>
+            <div class="case__item">
+              <dt class="case__text">затрачено времени</dt>
+              <dd class="case__number">60 дней</dd>
+            </div>
+          </dl>
 
-        <p class="case__price">Затраты на питание:<span class="case__price-amount">15 000 руб.</span></p>
+          <p class="case__price">Затраты на питание: <span class="case__price-amount">15&nbsp;000 руб.</span></p>
+        </div>
 
         <div class="case__slider">
           <div class="compare-slider">
@@ -122,7 +128,7 @@
               <li class="compare-slider__screen compare-slider__screen--before">
                 <picture>
                   <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-before-desktop@1x.png 1x, images/cat-before-desktop@2x.png 2x">
-                  <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x">
+                  <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x" width="560" height="512">
                   <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Толстый кот до похудения.">
                 </picture>
               </li>
@@ -130,7 +136,7 @@
               <li class="compare-slider__screen compare-slider__screen--after">
                 <picture>
                   <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-after-desktop@1x.png 1x, images/cat-after-desktop@2x.png 2x">
-                  <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x">
+                  <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x" width="560" height="512">
                   <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Нормальный кот после похудения.">
                 </picture>
               </li>
